继续调整样式

--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -1,4 +1,24 @@
 <style>
+.order-info {
+    margin: 12px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 1px 3px 0px #bdbdbd;
+}
+.order-info .order-item {
+    box-shadow: none;
+}
+
+.bookMore {
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    text-align: center;
+    margin: 5px 15px;
+    margin-top: -7px;
+    height: 40px;
+    line-height: 40px;
+}
+
 .order-fundList {
     white-space: nowrap;
     overflow-x: scroll;
@@ -50,32 +70,33 @@ input[type=checkbox] {
     display: inline-block;
 }
 
-.order-btn {
-    flex-grow: 1;
-    border: none;
-    border-radius: 0;
-    height: 50px;
-}
-.width30 {
-    width: 30vw;
-}
-.width70 {
-    width: 70vw;
-}
-.width100 {
+.orderBar {
     width: 100vw;
+    position: fixed;
+    bottom: 0;
+    box-shadow: 0px 1px 3px 0px #bdbdbd;
 }
+.order-btn {
+    width: 45vw;
+    border: none;
+    height: 40px;
+    margin: 7px;
+    box-shadow: 0px 1px 3px 0px #bdbdbd;
+}
+
 .visible-hidden {
     visibility: hidden;
 }
-
-.orderBar {
-    position: fixed;
-    bottom: 0;
+.payTypeRow {
+    margin-bottom: 17px;
+}
+.check-icon {
+    background-size: cover;
+    top: -4px;
 }
 </style>
-<div ms-controller="order">
-    <div style="margin: 0 auto;" class="bs-bg-white">
+<div ms-controller="order" class="bs-bg-f2">
+    <div class="order-info">
         <div class="hotel">
             <!-- <div ms-on-tap="goHotelById(hotel.id)"> -->
             <div>
@@ -91,7 +112,7 @@ input[type=checkbox] {
             <li class="order-item" ms-repeat="data.orderRoomList" ms-data-index="$index" ms-click="selectRoom($index, el.status)" style="padding: 8px 0 8px 10px;">
                 <div class="hiddenbox">
                     <input type="checkbox" style="display: none;" ms-duplex-number="selectedList" ms-attr-value="$index" />
-                    <div ms-visible="data.status==1" class="check-icon" ms-class-1="unchecked:selectedList.indexOf($index)<0" ms-class-2="checked:selectedList.indexOf($index)>-1" style="position: absolute; right: 5px;"></div>
+                    <div ms-visible="data.status==1" class="check-icon" ms-class-1="unchecked:selectedList.indexOf($index)<0" ms-class-2="checked:selectedList.indexOf($index)>-1" style="position: absolute; right: 5px;top: 7px;"></div>
                 </div>
                 <!-- 右上角房间状态 -->
                 <span class="status bs-text-smaller bs-text-444 bs-bg-yellow" ms-if="data.status>1">{{getStatus(el.status)}}</span>
@@ -119,7 +140,7 @@ input[type=checkbox] {
                 <span style="clear: both;">&nbsp;</span>
             </li>
         </ul>
-        <div class="bs-text-large" style="text-align: center;margin-top: -14px;background: #fff;height: 40px;line-height: 40px;" ms-click="goHotelById(data.hotel.id)" ms-if="data.status==1">
+        <div class="bs-text-large bookMore" ms-click="goHotelById(data.hotel.id)" ms-if="data.status==1">
             <span class="mui-icon mui-icon-plusempty" style="font-size: 32px;position: relative;top: 3px;"></span>预定更多房间
         </div>
         <!-- <div class="order-panel" ms-if="data.status==1"> -->
@@ -154,7 +175,7 @@ input[type=checkbox] {
                 <span class="info-right bs-text-black" style="text-align: right;">- {{fund}}元</span>
             </div>
             <div ms-if="(discount<1)&&(needAmount-fund>0)">
-                <span class="info-left">{{discountCard}}{{discount*10}}折</span>
+                <span class="info-left">{{discountCard}}{{discount*10}}折: </span>
                 <span class="info-right bs-text-black">
                 - {{round((needAmount-fund)*(1-discount))}}元</span>
             </div>
@@ -172,52 +193,40 @@ input[type=checkbox] {
             <div>
                 <span class="info-left">实付金额:</span>
                 <span class="info-right">
-                {{data.status!=1?data.paidAmount:(round(needAmount-fund)<0?0:round((needAmount-fund)*discount))}}元
+                    {{data.status!=1?data.paidAmount:(round(needAmount-fund)<0?0:round((needAmount-fund)*discount))}}元
                 </span>
             </div>
-            <div>&nbsp;</div>
         </div>
+    </div>
 
-        <div class="order-panel bs-text-small" ms-if="data.status==1">
-            <div class="order-panel-title bs-text-large bs-text-gray">支付方式</div>
-            <!-- <div ms-if="discount<1" ms-click="selectPayType(6)" style="margin-bottom: 10px;">
+    <div class="order-info bs-text-small" ms-if="data.status==1">
+        <div class="order-panel bs-text-small bs-text-444">
+            <div class="order-panel-title bs-text-larger">支付方式</div>
+            <div ms-click="selectPayType(6)" class="payTypeRow">
                 <div class="hiddenbox">
-                    <div class="check-icon" ms-class-1="unchecked:payType!=6" ms-class-2="checked:payType==6" style="position: absolute; right: 5px;"></div>
-                </div>
-                <span class="bs-text-normal bs-text-black">钱包支付</span>
-            </div> -->
-            <div ms-click="selectPayType(6)" style="margin-bottom: 10px;">
-                <div class="hiddenbox">
-                    <div class="check-icon" ms-class-1="unchecked:payType!=6" ms-class-2="checked:payType==6" style="position: absolute; right: 5px;"></div>
+                    <div class="check-icon" ms-class-1="unchecked:payType!=6" ms-class-2="checked:payType==6"></div>
                 </div>
                 <span class="bs-text-normal bs-text-black">钱包支付</span>
             </div>
-            <div ms-click="selectPayType(8)" style="margin-bottom: 10px;">
+            <div ms-click="selectPayType(8)" class="payTypeRow">
                 <div class="hiddenbox">
-                    <div class="check-icon" ms-class-1="unchecked:payType!=8" ms-class-2="checked:payType==8" style="position: absolute; right: 5px;"></div>
+                    <div class="check-icon" ms-class-1="unchecked:payType!=8" ms-class-2="checked:payType==8"></div>
                 </div>
                 <span class="bs-text-normal bs-text-black">时币支付</span>
             </div>
-            <!-- <div ms-if="isweixin" ms-click="selectPayType(2)" style="margin-bottom: 10px;">
+            <div ms-click="selectPayType(2)" class="payTypeRow">
                 <div class="hiddenbox">
-                    <div class="check-icon" ms-class-1="unchecked:payType!=2" ms-class-2="checked:payType==2" style="position: absolute; right: 5px;"></div>
-                </div>
-                <span class="bs-text-normal bs-text-black">微信支付</span>
-            </div> -->
-            <div ms-click="selectPayType(2)" style="margin-bottom: 10px;">
-                <div class="hiddenbox">
-                    <div class="check-icon" ms-class-1="unchecked:payType!=2" ms-class-2="checked:payType==2" style="position: absolute; right: 5px;"></div>
+                    <div class="check-icon" ms-class-1="unchecked:payType!=2" ms-class-2="checked:payType==2"></div>
                 </div>
                 <span class="bs-text-normal bs-text-black">微信支付</span>
             </div>
-            <div ms-click="selectPayType(1)">
+            <div ms-click="selectPayType(1)" class="payTypeRow">
                 <div class="hiddenbox">
-                    <div class="check-icon" ms-class-1="unchecked:payType!=1" ms-class-2="checked:payType==1" style="position: absolute; right: 5px;"></div>
+                    <div class="check-icon" ms-class-1="unchecked:payType!=1" ms-class-2="checked:payType==1"></div>
                 </div>
                 <span class="bs-text-normal bs-text-black">支付宝支付（请在浏览器中打开）</span>
             </div>
         </div>
-        <br>
     </div>
 
     <!-- 操作面板 -->
@@ -241,11 +250,14 @@ input[type=checkbox] {
           </li>
         </ul>
     </div>
-
-    <div class="orderBar" ms-if="btn1Text!=''||btn2Text!=''">
-        <div style="display: flex;">
-            <button type="button" class="order-btn bs-text-white" ms-click="btn1Click" ms-if="btn1Text!=''" ms-attr-disabled="btn1Disabled" ms-class-1="bs-bg-gray:data.status==1||data.status==2" ms-class-2="bs-bg-gold:data.status==3||data.staus==4" ms-class-3="width100:data.status==2||data.status==4">{{btn1Text}}</button>
-            <button type="button" class="order-btn bs-text-white bs-bg-black" ms-click="btn2Click" ms-if="btn2Text!=''" ms-attr-disabled="btn2Disabled">{{btn2Text}}</button>
+    <br>
+    <br>
+    <br>
+    <div class="orderBar bs-bg-white" ms-if="btn1Text!=''||btn2Text!=''">
+        <div style="display: flex;justify-content: space-around;">
+            <button type="button" class="order-btn bs-text-444 bs-text-larger" ms-click="btn1Click" ms-if="btn1Text!=''" ms-attr-disabled="btn1Disabled" ms-class-1="bs-bg-bd:data.status==1||data.status==2" ms-class-2="bs-bg-gold:data.status==3||data.staus==4">{{btn1Text}}
+            </button>
+            <button type="button" class="order-btn bs-text-yellow bs-text-larger bs-bg-black" ms-click="btn2Click" ms-if="btn2Text!=''" ms-attr-disabled="btn2Disabled">{{btn2Text}}</button>
         <!--  ms-class="visible-hidden:btn1Text==''
             ms-class="visible-hidden:btn2Text==''" -->
         </div>
