--- a/js/pages/invite/vip-invite.html
+++ b/js/pages/invite/vip-invite.html
@@ -1,5 +1,5 @@
 <div ms-controller="invite" class="bs-bg-white" style="height: 100vh;">
-    <div class="mask-fullscreen bs-text-white" ms-if="isShowMask" ms-click="maskToggle" style="padding-right: 3vw;">
+    <div class="mask-fullscreen bs-text-white" ms-if="isShowMask" ms-click="maskToggle" style="padding-right: 3vw;z-index: 999;">
         <img src="../img/icon/arrow_top.gif" style="width: 30px;">
         <div class="bs-text-larger" style="position: relative;padding-top: 3vh;line-height: 25px;">
             <div>
