1、总资产及其明细接口对接，样式修改。总资产的接口不完整。 2、城市页面样式调整完毕

--- a/js/pages/assets/information.html
+++ b/js/pages/assets/information.html
@@ -80,26 +80,26 @@
         <div class="profit-block">
             <div class="profit-left" style="border-bottom: 1px solid #ccc;">
                 <div class="unit-spacing">
-                    提前退房
+                    {{list[0].source}}
                 </div>
                 <div>
-                    +20.00
+                    +{{list[0].amount}}
                 </div>
             </div>
             <div class="profit-right" style="border-bottom: 1px solid #ccc;">
                 <div class="unit-spacing">
-                    现金兑换
+                    {{list[1].source}}
                 </div>
                 <div>
-                    +60.00
+                    +{{list[1].amount}}
                 </div>
             </div>
             <div class="profit-left">
                 <div class="unit-spacing">
-                    邀请奖励
+                    {{list[2].source}}
                 </div>
                 <div>
-                    +20.00
+                    +{{list[2].amount}}
                 </div>
             </div>
         </div>
