--- a/js/pages/recharge/tokensRecharge.html
+++ b/js/pages/recharge/tokensRecharge.html
@@ -95,7 +95,7 @@
     line-height: 20px;
 }
 </style>
-<div style="height: 100vh;">
+<div style="height: 100vh;" ms-controller="tokensRecharge">
 	<div class="content-bg">
     <div class="account-information">
         <div class="item-name">账户昵称</div>
